// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`localReducer actions localClear() clears the resource from state 1`] = `
Object {
  "resources": Object {
    "people": Object {},
  },
}
`;

exports[`localReducer actions localCreate() populates the state with resources 1`] = `
Object {
  "resources": Object {
    "people": Object {
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`localReducer actions localDelete() deletes that resource 1`] = `
Object {
  "resources": Object {
    "people": Object {
      "1": "foo",
      "2": "bar",
    },
  },
}
`;

exports[`localReducer actions localHydrate() populates the state with resources 1`] = `
Object {
  "resources": Object {
    "people": Object {
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`localReducer actions localRead() populates the state with resources 1`] = `
Object {
  "resources": Object {
    "people": Object {
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`localReducer actions localUpdate() updates that resource 1`] = `
Object {
  "resources": Object {
    "people": Object {
      "1": "foo",
      "2": "bar",
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`localReducer initialState has an empty resources object 1`] = `
Object {
  "resources": Object {},
}
`;
